attempted fix at svg icons in the header h1 words where they are off center

--- a/asset/src/scss/global/_structure.scss
+++ b/asset/src/scss/global/_structure.scss
@@ -60,8 +60,8 @@ h1 {
 		width: 100%;
 		background: $white;
 		color: $satpurple;
-		margin-left: -0.15em;
-		padding-right: 0.15em;
+		// margin-left: -0.15em;
+		// padding-right: 0.15em;
 
 		.word {
 			position: relative;
